@@ -2,6 +2,11 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2024-03-22:
+
+- Fixed a crash in the getconf built-in that could occur after the 'builtin'
+  command was used to bind it to the same path as the external getconf command.
+
 2024-03-20:
 
 - Android with Termux is now a supported environment for ksh 93u+m. Testing
